--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,6 @@
 # Project Information
 site_name: llvm wiki
-site_description: OI Wiki 是一个编程竞赛知识整合站点，提供有趣又实用的编程竞赛知识以及其他有帮助的内容，帮助广大编程竞赛爱好者更快更深入地学习编程竞赛
+site_description: The llvm wiki provides wiki documentation on reusable compilation techniques
 site_author: llvm wiki Team
 site_url: https://llvm.wiki
 strict: false
