--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 mkdocs = "*"
 mkdocs-material = "*"
 mkdocs-i18n = {ref = "disable_lang_links", git = "https://gitlab.com/noymer/mkdocs-i18n.git"}
+pymdown-extensions = "*"
+pygments = "*"
 
 [dev-packages]
 
