[ui] font Fira Sans -> Lato

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ theme:
   name: material
   language: 'en'
   font:
-    text: 'Fira Sans'
+    text: 'Lato'
     code: 'Fira Mono'
   features:
     - navigation.tabs
