[misc] dark mode support

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,19 @@ theme:
     - search.highlight
     - search.share
   palette:
-    primary: white
+    # Palette toggle for light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      primary: white
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    # Palette toggle for dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
 
 extra:
   # Default mkdocs-material alternate links for untranslated pages
