[misc] llvm.wiki -> compilers.wiki

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,4 +35,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./site
           force_orphan: true
-          cname: llvm.wiki
+          cname: compilers.wiki
